# dffs

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml  requirements-ci.txt  requirements.txt  setup.py  test_utils.py
.github/workflows/: ci.yml
dffs/: _version.py  cli.py  shell_integration_cli.py  utils.py
dffs/comm_x/: __init__.py
dffs/commands/: shell_integration.py
dffs/diff_x/: __init__.py
dffs/git_diff_x/: __init__.py
dffs/shell/: dffs.bash
docs/: category-theory.md
example/: config.json  data.csv
qmds/: cli.py
qmds/comm_x/: __init__.py
qmds/diff_x/: __init__.py
qmds/git_diff_x/: __init__.py
qmdx/: __init__.py  utils.py
qmdx/comm_x/: __init__.py
qmdx/diff_x/: __init__.py
qmdx/git_diff_x/: __init__.py
tests/: test_comm_x.py  test_diff_x.py  test_git_diff_x.py  test_join_pipelines.py  test_shell_integration.py  test_utils.py
