[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dffs"
version = "0.1.0"
description = "Pipe and diff files: execute shell pipelines against multiple inputs, diff/compare/join results."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Ryan Williams", email = "ryan@runsascoded.com"}
]
requires-python = ">=3.10"
dependencies = [
    "click",
    "utz>=0.13.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
ci = [
    "bmdf>=0.4.0",
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/runsascoded/dffs"
"Author URL" = "https://github.com/ryan-williams"

[project.scripts]
diff-x = "dffs.diff_x:main"
comm-x = "dffs.comm_x:main"
git-diff-x = "dffs.git_diff_x:main"
dffs-shell-integration = "dffs.shell_integration_cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
]
